# zoo-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  data.json  data_test.json  species.json  zooapp.drawio
src/: data.json
src/animals/: amphibian.cpp  amphibian.hpp  animal.cpp  animal.hpp  bird.cpp  bird.hpp  fish.cpp  fish.hpp  mammal.cpp  mammal.hpp  reptile.cpp  reptile.hpp
src/app/: animal_manager.cpp  animal_manager.hpp  zoo_app.cpp  zoo_app.hpp
src/gui/: add_edit.cpp  add_edit.hpp  detail_panel.cpp  detail_panel.hpp  main_frame.cpp  main_frame.hpp
src/test/: tests_extra.cpp  zoo_test  zoo_test.cpp
